--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -61,9 +61,13 @@ section>h5 {
   color: var(--color-light);
 }
 
+section>h5 {
+  margin-bottom: 3rem;
+}
+
 section>h2 {
   color: var(--color-primary);
-  margin-bottom: 3rem;
+  
 }
 
 .text-light {
