--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -87,7 +87,8 @@ a:hover {
   width: max-content;
   display: inline-block;
   color: var(--color-primary);
-  padding: 0.75rem 1.2rem;
+  padding: 0.35rem 1rem;
+  margin-top: 8px;
   border-radius: 0.4rem;
   cursor: pointer;
   border: 1px solid var(--color-primary);
