--- a/front-end/src/components/header/header.css
+++ b/front-end/src/components/header/header.css
@@ -88,13 +88,23 @@
 }
 
 .me {
-    background: linear-gradient(var(--color-primary), transparent);
-    width: 22rem;
-    height: 15rem;
+    /* background: linear-gradient(var(--color-primary), transparent); */
+    width: 20rem;
+    height: 35rem;
     border-radius: 12rem 12rem 0 0;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
+    object-fit: cover;
+    margin-top: -12rem;
+    margin-right: 5rem;
+    /* padding: 5rem 1.5rem 1.5rem 1.5rem; */
 }
-
+.profile-image {
+    border-radius: "12rem 12rem 0 0";
+    object-fit: cover;
+    height: 53rem;
+    width: 25rem;
+    
+    
+}
 .text_light {
     animation: flip 2s infinite;
     animation-delay: calc(.2s * var(--i));
